force-app/main/default/objects/nimba_TagRelationship__c/nimba_TagRelationship__c.object-meta.xml
<CustomObject>
    <description>Relates nimba_Tag records to records of other objects</description>
    <label>nimba_TagRelationship</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>TagRelationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>nimba_TagRelationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>