force-app/main/default/objects/nimba_TagRelationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>nimba_TagRelationships</relationshipLabel>
    <relationshipName>nimba_TagRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>