force-app/main/default/objects/nimba_TagRelationship__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>nimba_TagRelationships</relationshipLabel>
    <relationshipName>nimba_TagRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>