force-app/main/default/objects/nimba_TagRelationship__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Related parent tag</description>
    <label>Tag</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>TagRelationships</relationshipLabel>
    <relationshipName>TagRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>